10_project/manifests/01_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - image: gmnvnorlov/ms-arch-tasks-authservice:3.0.1
          name: authservice-container
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profileservice
  labels:
    app: profileservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profileservice
  template:
    metadata:
      labels:
        app: profileservice
    spec:
      containers:
        - image: gmnvnorlov/ms-arch-tasks-profileservice:3.0.3
          name: profileservice-container
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/profileservice/actuator/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/profileservice/actuator/health
              port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
        - image: gmnvnorlov/ms-arch-tasks-checkoutservice:3.0.2
          name: checkoutservice-container
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/checkoutservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/checkoutservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - image: gmnvnorlov/ms-arch-tasks-orderservice:3.1.0
          name: orderservice-container
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/orderservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/orderservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  labels:
    app: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
        - image: gmnvnorlov/ms-arch-tasks-cartservice:3.0.1
          name: cartservice-container
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/cartservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/cartservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockservice
  labels:
    app: stockservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockservice
  template:
    metadata:
      labels:
        app: stockservice
    spec:
      containers:
        - image: gmnvnorlov/ms-arch-tasks-stockservice:3.0.1
          name: stockservice-container
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/stockservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/stockservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
  labels:
    app: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - image: gmnvnorlov/ms-arch-tasks-notificationservice:2.0.2
          name: notificationservice-container
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/notificationservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/notificationservice/actuator/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 120
            periodSeconds: 10
