10_project/manifests/03_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: profileservice
  labels:
    app: profileservice
spec:
  type: ClusterIP
  selector:
    app: profileservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  labels:
    app: cartservice
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stockservice
  labels:
    app: stockservice
spec:
  type: ClusterIP
  selector:
    app: stockservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
  labels:
    app: notificationservice
spec:
  type: ClusterIP
  selector:
    app: notificationservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: productservice
  labels:
    app: productservice
spec:
  type: ClusterIP
  selector:
    app: productservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: deliveryservice
  labels:
    app: deliveryservice
spec:
  type: ClusterIP
  selector:
    app: deliveryservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
